<resources>
    <string name="app_name">TakeAndGo2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password </string>
    <string name="action_sign_in">Sign in </string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="forgot_password">Forgot password</string>
    <string name="register">register</string>
    <string name="title_activity_login_activity2test">Sign in</string>
    <string name="title_activity_branchs">BranchsActivity</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="title_activity_credit_card">CreditCardActivity</string>
    <string name="title_activity_credit_card_info">CreditCardInfoActivity</string>
    <string name="title_activity_list_view_base">a</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="add_branch">add branch</string>
    <string name="country">country</string>
    <string name="city">city</string>
    <string name="street">street</string>
    <string name="house_num">house number</string>
    <string name="num_parking_spaces">number of  parking spaces</string>
    <string name="add">add</string>
    <string name="id">id</string>
    <string name="branch_number">Branch number</string>
    <string name="ID">ID</string>
    <string name="first_name">first name</string>
    <string name="last_name">Last Name</string>
    <string name="email">email</string>
    <string name="manufacturer_name">manufacturer name</string>
    <string name="model_name">model name</string>
    <string name="engine_capacity">engine capacity</string>
    <string name="seating">seating</string>
    <string name="gear_box">gear box</string>
    <string name="car_id">Car ID</string>
    <string name="km">KM</string>
    <string name="branch_id">branch ID</string>
    <string name="car_models">Car Models</string>
    <string name="expiration_date">expiration date</string>
    <string name="digits">digits</string>
    <string name="done">done</string>
    <string name="cvv">cvv</string>
    <string name="branchs">Branchs</string>
    <string name="customers">Customers</string>
    <string name="cars">Cars</string>
    <string name="log_out">log out</string>
    <string name="admin_users">Admin users</string>
    <string name="branch">Branch</string>
    <string name="car_model">Car model</string>
    <string name="error_user_pass">Error: Username or password is incorrect</string>
    <string name="error_the_user_already_exsit">Error: the user already exsit</string>
    <string name="Isreal">Isreal</string>
    <string name="branch_add_succ_mas">The branch was successfully added</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="contact_us">Contact Us</string>
    <string name="branches">Branches</string>
    <string name="active_invitation">Active invitation</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="create_account">Create Account</string>
    <string name="back_to_login">Back to login</string>
    <string name="loguot">Loguot</string>
    <string name="back">Back</string>
    <string name="phone">Phone:</string>
    <string name="phone_fack">Phone: 1800800800</string>
    <string name="email_fack">Email: email@gmail.com</string>
    <string name="contact_form">Contact Us</string>
    <string name="contact_form_name">Your Name</string>
    <string name="contact_form_email">Your Email</string>
    <string name="contact_form_subject">Subject</string>
    <string name="contact_form_message">Message</string>
    <string name="contact_form_button">Send Message</string>
    <string name="contact_form_post_message">Please wait! We\'re sending your message to the support department...</string>
    <string name="contact_posted">Your message has been successfully delivered.</string>
    <string name="phone_1800_123_456">Phone : 1800-123-456</string>
    <string name="take_and_go">Take and go</string>
    <string name="http_rafol_vlab_jct_ac_il_takeandgo_welcome_php">http://rafol.vlab.jct.ac.il/TakeAndGo/welcome.php</string>
    <string name="email_chezkiaho_gmail_com">Email : chezkiaho@gmail.com</string>
    <string name="chezkiaho_gmail_com">chezkiaho@gmail.com</string>
    <string name="_1800123456">1800123456</string>
    <string name="email_">Email:</string>
    <string name="title_activity_branch_fragment">BranchFragment</string>
    <string-array name="filled_tank_strings">
        <item>Yes</item>
        <item>No</item>
    </string-array>
    <string name="Order_ID">Order ID:</string>
    <string name="Car_ID">Car ID:</string>
    <string name="from">From</string>
    <string name="until">Until</string>
    <string name="start_km">Start KM</string>
    <string name="end_km">End KM</string>
    <string name="Status">Status :</string>
    <string name="return_of_a_vehicle">Return of a vehicle</string>
    <string name="save">Save</string>
    <string name="customer_id">Customer ID</string>
    <string name="return_filled_tank">Return filled tank</string>
    <string name="quantity_of_liters_of_fuel_to_be_charged">Quantity of liters of fuel to be charged</string>
</resources>