<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/contact_us"
            android:title="@string/contact_us" />

        <item
            android:id="@+id/branches"
            android:title="@string/branches" />
        <item
            android:id="@+id/order"
            android:title="Order" />
        <item
            android:id="@+id/active_invitation"
            android:title="@string/active_invitation" />
        <item
            android:id="@+id/log_out"
            android:title="Log Out" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>

</menu>
