<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".controller.main.Fragment.OrderFragment">


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <AutoCompleteTextView
            android:id="@+id/order_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Order_ID"
            android:inputType="number"
            android:maxLines="1"
            android:singleLine="true"
            android:enabled="false"
            android:visibility="gone"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <AutoCompleteTextView
            android:id="@+id/order_car_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Car_ID"
            android:inputType="number"
            android:maxLines="1"
            android:singleLine="true"
            android:enabled="false"/>

    </android.support.design.widget.TextInputLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/from"
            android:textSize="20sp"
            android:layout_gravity="center"/>

        <Button
            android:id="@+id/order_start"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/until"
            android:textSize="20dp"
            android:layout_gravity="center"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/order_end"
            />

    </LinearLayout>


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <AutoCompleteTextView
            android:id="@+id/order_start_km"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/start_km"
            android:maxLines="1"
            android:singleLine="true"
            android:enabled="true"
            android:inputType="number"/>

    </android.support.design.widget.TextInputLayout>



    <Button
        android:id="@+id/create_new_order"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Create an order"
        />






</LinearLayout>